[package]
name = "rudderanalytics"
version = "1.1.3"
edition = "2018"
readme = "README.md"
description = "The RudderStack Rust SDK is an analytics client to track events from your Rust application"
license = "MIT"
keywords = ["rudder", "rudderanalytics", "analytics", "rust", "rudderstack"]
repository = "https://github.com/rudderlabs/rudder-sdk-rust"

[[bin]]
name = "rudderanalytics"
path = "src/main.rs"
required-features = ["cli"]

[[example]]
name = "sample_one"
required-features = ["cli"]

[dependencies]
env_logger = "0.10.1"
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "json",
] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }
thiserror = "1.0"
tokio = { version = "1.35", optional = true }

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.clap]
optional = true
version = "4.4"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[features]
default = ["default-tls"]
cli = ["clap", "tokio", "tracing-subscriber"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
